# bridge_ide

./: .env  .env.example  .gitignore  LICENSE  README.md  debug_output.txt  output.txt  pyproject.toml  requirements.txt  run.py  test_runner.py  vercel.json  verify_generation.py
app/: main.py
app/agents/: classifier.py  code_generator.py  design.py  file_organizer.py  qa.py  refinement.py  research.py
app/api/: __init__.py  agent_routes.py
app/api/routes/: __init__.py  auth.py  code.py  preview.py
app/core/: __init__.py  config.py
app/graph/: state.py  workflow.py
app/models/: __init__.py
app/services/: __init__.py  cleanup.py  github_oauth.py  judge0.py  llm.py
bridge_ide/: pyvenv.cfg
bridge_ide.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bridge_ide/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
tests/: conftest.py  test_api.py  test_github_oauth.py  test_judge0.py
