[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-ide"
version = "1.0.0"
description = "FastAPI backend for Bridge IDE with GitHub OAuth and Judge0 code execution"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Bridge IDE Team"}]
keywords = ["fastapi", "github-oauth", "judge0", "code-execution"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
