[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-ide"
version = "1.0.0"
description = "Bridge IDE - Execute code, GitHub OAuth, and AI project generation"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-dotenv==1.0.0",
    "aiohttp==3.9.1",
    "httpx==0.25.2",
    "authlib==1.3.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "langgraph>=0.0.10",
    "langchain>=0.1.0",
    "langchain-groq>=0.0.1",
    "APScheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-httpx==0.26.0",
]
